syntax = "proto3";

package pkgproto;
option go_package = "strux_api/services/protofiles/pkgproto";

import "base_proto.proto";

service Package{
  rpc UploadPackage(RequestUploadPackage) returns (baseproto.BaseResponse) {}
  rpc ExistsPackage(RequestPackageExists) returns (baseproto.BaseResponse) {}
  rpc DownloadPackage(RequestDownloadPackage) returns (MutateDownloadBaseResponse) {}
  rpc ShowVersions(RequestShowVersions) returns (MutateShowVersionBaseResponse) {}
}

message MutateShowVersionBaseResponse{
  baseproto.BaseResponse BaseResponse = 1;
  repeated string Versions = 2;
}

message RequestShowVersions{
  string Username = 1;
  string PkgName = 2;
}

message MutateDownloadBaseResponse{
  baseproto.BaseResponse BaseResponse = 1;
  UploadDirInfo UplFiles = 2;
  UploadDirInfo UplDirInfo = 3;
  bytes UploadDirsInfoJson = 4;
}

message RequestDownloadPackage{
  string Username = 1;
  string PkgName = 2;
  string Version = 3;
}

message RequestPackageExists{
  string Username = 1;
  string PkgName = 2;
  string Version = 3;
}

message UploadDirInfo{
  string Name = 1;
  repeated string FileNames = 2;
  repeated UploadDirInfo InnerDir = 3;
}

message User {
  string Username = 1;
  string Password = 2;
}

message UploadFile{
  string FileName = 1;
  bytes FileBytesData = 2;
}

message RequestUploadPackage{
  User User = 1;
  repeated UploadFile UplFiles = 2;
  UploadDirInfo UplDirInfo = 3;
  string Version = 4;
}